# altcore

./: CMakeLists.txt  arenas.c  arenas.h  barrier.c  barrier.h  debug.c  debug.h  defer.c  defer.h  ecs.c  ecs.h  events.c  events.h  fs.c  fs.h  hashmap.c  hashmap.h  init.c  init.h  library.h  malloc.c  malloc.h  maths.c  maths.h  memory.c  memory.h  strings.c  strings.h  types.c  types.h  worker.c  worker.h
draw/: fonts.c  fonts.h  fonts_impl.c  fonts_impl.h  framebuffer.c  framebuffer.h  framebuffer_impl.h  lights.c  lights.h  pixels.c  pixels.h  pixels_impl.h  renderer.c  renderer.h  ui.c  ui.h  ui_impl.c  window.c  window.h  window_impl.h
draw/cmds/: clear.c  clear.h  draw_rect.c  draw_rect.h  draw_text.c  draw_text.h  fb_transition.c  fb_transition.h  present.c  present.h  scissor.c  scissor.h
libs/cwalk-1.2.9/: CMakeLists.txt
